Fixed spacing of elements inside listings-content div and remove listing button at unified listings pages

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -328,7 +328,6 @@ input:-webkit-autofill:focus {
 
     border: 0 solid blue;
 }
-
 .index-box-image img {
     object-fit: contain;
     margin-bottom: 0;
@@ -340,6 +339,7 @@ input:-webkit-autofill:focus {
 .index-box-description {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     gap: .5rem;
 
@@ -426,12 +426,72 @@ input:-webkit-autofill:focus {
     max-width: 300px;
     aspect-ratio: 1 / 1;
     flex-shrink: 0;
+
+    border: 0 solid blue;
 }
 
-.listings-description {
+.listings-box-description {
     display: flex;
     flex-direction: column;
     flex: 1; /* ocupa todo el espacio restante */
+    justify-content: space-between;
+
+    border: 0 solid blue;
+}
+
+.listings-box-description > div:first-child {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.listings-title {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    width: auto;
+    height: 2.1rem; 
+    font-weight: 600;
+
+    border: 0 solid red;
+}
+.listings-box-text {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    overflow: hidden;
+    font-weight: 200;
+    width: auto;
+    height: 4.1rem;
+
+    border: 0 solid red;
+}
+.listings-text-justify { 
+    text-align: justify; 
+    text-justify: inter-word; 
+    hyphens: auto;
+}
+
+
+.listings-detail-button {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    color: var(--color-tertiary);
+    background-color: var(--color-primary);
+    cursor: pointer;
+    margin: 0;
+
+    border: 0 solid red;
+}
+.listings-detail-button .icon {
+    width: 2.777vw;
+    height: 40px;
+    min-height: 40px;
 }
 
 @media (max-width: 1200px) {
